--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Audio Visualizer</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audio Visualizer</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <audio src="ssaliva.mp3" controls id="audio"></audio>
-  <canvas id="canvas"></canvas>
-  <script src="script.js"></script>
+    <button id="playButton">Play</button>
+    <audio controls id="audio">
+        <source src="ssaliva.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+    <canvas id="canvas"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
