--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <button id="playButton">Play</button>
     <audio controls id="audio">
-        <source src="ssaliva.mp3" type="audio/mp3">
+        <source src="frank-dukes.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
     <canvas id="canvas"></canvas>
