--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Visualizer</title>
+    <title>Waveform Viewer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="playButton">Play</button>
-    <audio controls id="audio">
-        <source src="frank-dukes.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
+    <div class="controls">
+        <button id="playButton">Play</button>
+        <audio controls id="audio">
+            <source src="ssaliva.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
     <canvas id="canvas"></canvas>
     <script src="script.js"></script>
 </body>
