--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="controls">
+    <div class="button-container">
         <button id="playButton">Play</button>
-        <audio controls id="audio">
-            <source src="ssaliva.mp3" type="audio/mp3">
-            Your browser does not support the audio element.
-        </audio>
     </div>
     <canvas id="canvas"></canvas>
+    <audio id="audio" src="ssaliva.mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
