new waveform with history

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <button id="playButton">Play</button>
     </div>
     <canvas id="canvas"></canvas>
-    <audio id="audio" src="ssaliva.mp3"></audio>
+    <audio id="audio" src="frank-dukes.mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
